src/css/Announcement.css
.Announcement-Container {
    text-align: center;
    display: flex;
}

.Announcement-Text {
    color: white;
    margin: auto;
    font-size: 1.5vw;
}

a:hover {
    color: white;
}

@media only screen and (max-width: 1100px) {
    .Announcement-Text {
        font-size: 2.5vw;
    }
}

@media only screen and (max-width: 800px) {
    .Announcement-Text {
        font-size: 2.3vw;
    }
}

@media only screen and (max-width: 600px) {
    .Announcement-Text {
        font-size: 4.2vw;
    }

    .Announcement-Text-Padding {
        margin-left: 2%;
        margin-right: 2%;
    }

}

